--- a/docs/docs-ref-autogen/excel/excel/excel.comment.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.comment.yml
@@ -17,6 +17,7 @@ items:
       - 'excel!Excel.Comment#authorEmail:member'
       - 'excel!Excel.Comment#authorName:member'
       - 'excel!Excel.Comment#content:member'
+      - 'excel!Excel.Comment#contentType:member'
       - 'excel!Excel.Comment#context:member'
       - 'excel!Excel.Comment#creationDate:member'
       - 'excel!Excel.Comment#delete:member(1)'
@@ -91,6 +92,22 @@ items:
               await context.sync();
           });
           ```
+  - uid: 'excel!Excel.Comment#contentType:member'
+    summary: |-
+      获取注释的内容类型。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: contentType
+    fullName: contentType
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'readonly contentType: Excel.ContentType | "Plain" | "Mention";'
+      return:
+        type:
+          - 'excel!Excel.Comment#contentType~0:complex'
   - uid: 'excel!Excel.Comment#context:member'
     summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
@@ -405,6 +422,15 @@ items:
 references:
   - uid: 'excel!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
+  - uid: 'excel!Excel.Comment#contentType~0:complex'
+    name: Excel.ContentType | "Plain" | "Mention"
+    fullName: Excel.ContentType | "Plain" | "Mention"
+    spec.typeScript:
+      - uid: 'excel!Excel.ContentType:enum'
+        name: Excel.ContentType
+        fullName: Excel.ContentType
+      - name: ' | "Plain" | "Mention"'
+        fullName: ' | "Plain" | "Mention"'
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
   - uid: '!Date:interface'
