--- a/docs/docs-ref-autogen/excel/excel/excel.cultureinfo.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.cultureinfo.yml
@@ -20,7 +20,7 @@ items:
       - 'excel!Excel.CultureInfo#load:member(2)'
       - 'excel!Excel.CultureInfo#load:member(3)'
       - 'excel!Excel.CultureInfo#name:member'
-      - 'excel!Excel.CultureInfo#numberFormatInfo:member'
+      - 'excel!Excel.CultureInfo#numberFormat:member'
       - 'excel!Excel.CultureInfo#toJSON:member(1)'
   - uid: 'excel!Excel.CultureInfo#context:member'
     summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
@@ -116,19 +116,19 @@ items:
       return:
         type:
           - string
-  - uid: 'excel!Excel.CultureInfo#numberFormatInfo:member'
+  - uid: 'excel!Excel.CultureInfo#numberFormat:member'
     summary: |-
       定义适当的区域性格式，以显示数字。 这取决于当前的系统区域性设置。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
-    name: numberFormatInfo
-    fullName: numberFormatInfo
+    name: numberFormat
+    fullName: numberFormat
     langs:
       - typeScript
     type: property
     syntax:
-      content: 'readonly numberFormatInfo: Excel.NumberFormatInfo;'
+      content: 'readonly numberFormat: Excel.NumberFormatInfo;'
       return:
         type:
           - 'excel!Excel.NumberFormatInfo:class'
