--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.charttrendlinelabelupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.charttrendlinelabelupdatedata.yml
@@ -142,7 +142,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData#textOrientation:member'
     summary: |-
-      表示文本面向图表趋势线标签的角度。 此值应是 -90 到 90 或 180（垂直文本）之间的整数。
+      表示文本面向图表趋势线标签的角度。 该值应为-90 到90的整数或垂直方向的文本的整数180。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: textOrientation
