--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentdata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentdata.yml
@@ -12,6 +12,7 @@ items:
       - 'excel!Excel.Interfaces.CommentData#authorEmail:member'
       - 'excel!Excel.Interfaces.CommentData#authorName:member'
       - 'excel!Excel.Interfaces.CommentData#content:member'
+      - 'excel!Excel.Interfaces.CommentData#contentType:member'
       - 'excel!Excel.Interfaces.CommentData#creationDate:member'
       - 'excel!Excel.Interfaces.CommentData#id:member'
       - 'excel!Excel.Interfaces.CommentData#mentions:member'
@@ -63,6 +64,22 @@ items:
       return:
         type:
           - string
+  - uid: 'excel!Excel.Interfaces.CommentData#contentType:member'
+    summary: |-
+      获取注释的内容类型。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: contentType
+    fullName: contentType
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'contentType?: Excel.ContentType | "Plain" | "Mention";'
+      return:
+        type:
+          - 'excel!Excel.Interfaces.CommentData#contentType~0:complex'
   - uid: 'excel!Excel.Interfaces.CommentData#creationDate:member'
     summary: |-
       获取批注的创建时间。 如果批注是从备注转换而来的，则返回 null，因为批注没有创建日期。
@@ -155,6 +172,15 @@ items:
         type:
           - string
 references:
+  - uid: 'excel!Excel.Interfaces.CommentData#contentType~0:complex'
+    name: Excel.ContentType | "Plain" | "Mention"
+    fullName: Excel.ContentType | "Plain" | "Mention"
+    spec.typeScript:
+      - uid: 'excel!Excel.ContentType:enum'
+        name: Excel.ContentType
+        fullName: Excel.ContentType
+      - name: ' | "Plain" | "Mention"'
+        fullName: ' | "Plain" | "Mention"'
   - uid: '!Date:interface'
     name: Date
   - uid: 'excel!Excel.Interfaces.CommentData#mentions~0:complex'
