--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.cultureinfodata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.cultureinfodata.yml
@@ -10,7 +10,7 @@ items:
     package: excel!
     children:
       - 'excel!Excel.Interfaces.CultureInfoData#name:member'
-      - 'excel!Excel.Interfaces.CultureInfoData#numberFormatInfo:member'
+      - 'excel!Excel.Interfaces.CultureInfoData#numberFormat:member'
   - uid: 'excel!Excel.Interfaces.CultureInfoData#name:member'
     summary: |-
       以 languagecode2/regioncode2 格式获取区域性名称（例如，"zh-tw-cn" or "en-us"）。 这取决于当前的系统设置。
@@ -27,19 +27,19 @@ items:
       return:
         type:
           - string
-  - uid: 'excel!Excel.Interfaces.CultureInfoData#numberFormatInfo:member'
+  - uid: 'excel!Excel.Interfaces.CultureInfoData#numberFormat:member'
     summary: |-
       定义适当的区域性格式，以显示数字。 这取决于当前的系统区域性设置。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
-    name: numberFormatInfo
-    fullName: numberFormatInfo
+    name: numberFormat
+    fullName: numberFormat
     langs:
       - typeScript
     type: property
     syntax:
-      content: 'numberFormatInfo?: Excel.Interfaces.NumberFormatInfoData;'
+      content: 'numberFormat?: Excel.Interfaces.NumberFormatInfoData;'
       return:
         type:
           - 'excel!Excel.Interfaces.NumberFormatInfoData:interface'
