--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivotlayoutloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivotlayoutloadoptions.yml
@@ -16,6 +16,7 @@ items:
       - 'excel!Excel.Interfaces.PivotLayoutLoadOptions#autoFormat:member'
       - 'excel!Excel.Interfaces.PivotLayoutLoadOptions#enableFieldList:member'
       - 'excel!Excel.Interfaces.PivotLayoutLoadOptions#layoutType:member'
+      - 'excel!Excel.Interfaces.PivotLayoutLoadOptions#pivotStyle:member'
       - 'excel!Excel.Interfaces.PivotLayoutLoadOptions#preserveFormatting:member'
       - 'excel!Excel.Interfaces.PivotLayoutLoadOptions#showColumnGrandTotals:member'
       - 'excel!Excel.Interfaces.PivotLayoutLoadOptions#showRowGrandTotals:member'
@@ -77,6 +78,22 @@ items:
       return:
         type:
           - boolean
+  - uid: 'excel!Excel.Interfaces.PivotLayoutLoadOptions#pivotStyle:member'
+    summary: |-
+      应用于数据透视表的样式。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: pivotStyle
+    fullName: pivotStyle
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'pivotStyle?: Excel.Interfaces.PivotTableStyleLoadOptions;'
+      return:
+        type:
+          - 'excel!Excel.Interfaces.PivotTableStyleLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.PivotLayoutLoadOptions#preserveFormatting:member'
     summary: |-
       指定是否在通过透视、排序或更改页面字段项等操作来刷新或重新计算报表时保留格式。
@@ -137,3 +154,6 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: 'excel!Excel.Interfaces.PivotTableStyleLoadOptions:interface'
+    name: Excel.Interfaces.PivotTableStyleLoadOptions
