--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.slicerdata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.slicerdata.yml
@@ -17,6 +17,7 @@ items:
       - 'excel!Excel.Interfaces.SlicerData#name:member'
       - 'excel!Excel.Interfaces.SlicerData#nameInFormula:member'
       - 'excel!Excel.Interfaces.SlicerData#slicerItems:member'
+      - 'excel!Excel.Interfaces.SlicerData#slicerStyle:member'
       - 'excel!Excel.Interfaces.SlicerData#sortBy:member'
       - 'excel!Excel.Interfaces.SlicerData#style:member'
       - 'excel!Excel.Interfaces.SlicerData#top:member'
@@ -143,6 +144,22 @@ items:
       return:
         type:
           - 'excel!Excel.Interfaces.SlicerData#slicerItems~0:complex'
+  - uid: 'excel!Excel.Interfaces.SlicerData#slicerStyle:member'
+    summary: |-
+      应用于切片器的样式。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: slicerStyle
+    fullName: slicerStyle
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'slicerStyle?: Excel.Interfaces.SlicerStyleData;'
+      return:
+        type:
+          - 'excel!Excel.Interfaces.SlicerStyleData:interface'
   - uid: 'excel!Excel.Interfaces.SlicerData#sortBy:member'
     summary: |-
       表示切片器中的项目的排序顺序。 可能的值为： "DataSourceOrder"、"升序"、"降序"。
@@ -228,6 +245,8 @@ references:
         fullName: Excel.Interfaces.SlicerItemData
       - name: '[]'
         fullName: '[]'
+  - uid: 'excel!Excel.Interfaces.SlicerStyleData:interface'
+    name: Excel.Interfaces.SlicerStyleData
   - uid: 'excel!Excel.Interfaces.SlicerData#sortBy~0:complex'
     name: Excel.SlicerSortType | "DataSourceOrder" | "Ascending" | "Descending"
     fullName: Excel.SlicerSortType | "DataSourceOrder" | "Ascending" | "Descending"
