--- a/docs/docs-ref-autogen/excel/excel/excel.tablefilteredeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.tablefilteredeventargs.yml
@@ -18,7 +18,7 @@ items:
       - 'excel!Excel.TableFilteredEventArgs#worksheetId:member'
   - uid: 'excel!Excel.TableFilteredEventArgs#tableId:member'
     summary: |-
-      表示应用了筛选器的表的 id。
+      获取应用了筛选器的表的 id。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -34,7 +34,7 @@ items:
           - string
   - uid: 'excel!Excel.TableFilteredEventArgs#type:member'
     summary: |-
-      表示事件的类型。 有关详细信息，请参阅 Excel.EventType。
+      获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -50,7 +50,7 @@ items:
           - '"TableFiltered"'
   - uid: 'excel!Excel.TableFilteredEventArgs#worksheetId:member'
     summary: |-
-      表示包含表格的工作表的 ID。
+      获取包含表的工作表的 id。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
