--- a/docs/docs-ref-autogen/excel/excel/excel.worksheetfilteredeventargs.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.worksheetfilteredeventargs.yml
@@ -17,7 +17,7 @@ items:
       - 'excel!Excel.WorksheetFilteredEventArgs#worksheetId:member'
   - uid: 'excel!Excel.WorksheetFilteredEventArgs#type:member'
     summary: |-
-      表示事件的类型。 有关详细信息，请参阅 Excel.EventType。
+      获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
@@ -33,7 +33,7 @@ items:
           - '"WorksheetFiltered"'
   - uid: 'excel!Excel.WorksheetFilteredEventArgs#worksheetId:member'
     summary: |-
-      表示在其中应用筛选器的工作表的 ID。
+      获取应用了筛选器的工作表的 id。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
