--- a/docs/docs-ref-autogen/excel/toc.yml
+++ b/docs/docs-ref-autogen/excel/toc.yml
@@ -39,8 +39,14 @@ items:
                 uid: 'excel!Excel.BorderLineStyle:enum'
               - name: BorderWeight
                 uid: 'excel!Excel.BorderWeight:enum'
+              - name: BuiltInPivotTableStyle
+                uid: 'excel!Excel.BuiltInPivotTableStyle:enum'
+              - name: BuiltInSlicerStyle
+                uid: 'excel!Excel.BuiltInSlicerStyle:enum'
               - name: BuiltInStyle
                 uid: 'excel!Excel.BuiltInStyle:enum'
+              - name: BuiltInTableStyle
+                uid: 'excel!Excel.BuiltInTableStyle:enum'
               - name: CalculationMode
                 uid: 'excel!Excel.CalculationMode:enum'
               - name: CalculationState
@@ -213,6 +219,8 @@ items:
                 uid: 'excel!Excel.NamedItemScope:enum'
               - name: NamedItemType
                 uid: 'excel!Excel.NamedItemType:enum'
+              - name: NumberFormatCategory
+                uid: 'excel!Excel.NumberFormatCategory:enum'
               - name: PageOrientation
                 uid: 'excel!Excel.PageOrientation:enum'
               - name: PaperType
@@ -354,7 +362,7 @@ items:
                 uid: 'excel!Excel.ThreeTrafficLights2Set:interface'
               - name: ThreeTrianglesSet
                 uid: 'excel!Excel.ThreeTrianglesSet:interface'
-          - name: 应用程序
+          - name: 应用
             uid: 'excel!Excel.Application:class'
           - name: AutoFilter
             uid: 'excel!Excel.AutoFilter:class'
@@ -580,7 +588,7 @@ items:
             uid: 'excel!Excel.DateTimeDataValidation:interface'
           - name: DocumentProperties
             uid: 'excel!Excel.DocumentProperties:class'
-          - name: 筛选器
+          - name: 筛选
             uid: 'excel!Excel.Filter:class'
           - name: FilterCriteria
             uid: 'excel!Excel.FilterCriteria:interface'
@@ -918,7 +926,7 @@ items:
                     uid: 'office!Office.AddinCommands.Event:interface'
                   - name: EventCompletedOptions
                     uid: 'office!Office.AddinCommands.EventCompletedOptions:interface'
-                  - name: Source
+                  - name: 源
                     uid: 'office!Office.AddinCommands.Source:interface'
               - name: AsyncContextOptions
                 uid: 'office!Office.AsyncContextOptions:interface'
@@ -958,7 +966,7 @@ items:
                 uid: 'office!Office.Document:interface'
               - name: DocumentSelectionChangedEventArgs
                 uid: 'office!Office.DocumentSelectionChangedEventArgs:interface'
-              - name: Error
+              - name: 错误
                 uid: 'office!Office.Error:interface'
               - name: 文件
                 uid: 'office!Office.File:interface'
@@ -1036,7 +1044,7 @@ items:
                 uid: 'office!OfficeExtension.EmbeddedOptions:interface'
               - name: EmbeddedSession
                 uid: 'office!OfficeExtension.EmbeddedSession:class'
-              - name: Error
+              - name: 错误
                 uid: 'office!OfficeExtension.Error:class'
               - name: ErrorCodes
                 uid: 'office!OfficeExtension.ErrorCodes:class'
