--- a/docs/docs-ref-autogen/office/office/office.dialog.yml
+++ b/docs/docs-ref-autogen/office/office/office.dialog.yml
@@ -12,6 +12,7 @@ items:
     children:
       - 'office!Office.Dialog#addEventHandler:member(1)'
       - 'office!Office.Dialog#close:member(1)'
+      - 'office!Office.Dialog#messageChild:member(1)'
       - 'office!Office.Dialog#sendMessage:member(1)'
   - uid: 'office!Office.Dialog#addEventHandler:member(1)'
     summary: |-
@@ -53,6 +54,26 @@ items:
         type:
           - void
         description: ''
+  - uid: 'office!Office.Dialog#messageChild:member(1)'
+    summary: 将来自主机页（如任务窗格或无 UI 的函数文件）的消息传递到从页面打开的对话框。
+    remarks: '**要求集**： TBD'
+    isPreview: true
+    name: messageChild(message)
+    fullName: messageChild(message)
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'messageChild(message: string): void;'
+      return:
+        type:
+          - void
+        description: ''
+      parameters:
+        - id: message
+          description: 接受来自主机页面的一条消息以传递到对话框。 可以将任何可序列化为字符串的内容（包括 JSON 和 XML）都发送。
+          type:
+            - string
   - uid: 'office!Office.Dialog#sendMessage:member(1)'
     summary: 仅供内部使用。 请勿在代码中调用。
     name: sendMessage(name)
