--- a/docs/docs-ref-autogen/outlook_1_5/outlook/office.mailbox.yml
+++ b/docs/docs-ref-autogen/outlook_1_5/outlook/office.mailbox.yml
@@ -1026,7 +1026,7 @@ items:
 
       在撰写模式中，必须调用 `saveAsync` 方法，才能使用 `restUrl` 成员。 您的应用程序`ReadWriteItem`必须具有调用该`saveAsync`方法的权限。
 
-      但是，在委托或共享方案中，您应该改用对象`targetRestUrl`的属性（在要求集1.8 中引入）。 有关详细信息，请参阅[代理访问](https://docs.microsoft.com/office/dev/add-ins/outlook/delegate-access)文章。
+      但是，在委托或共享方案中，您应该改用`targetRestUrl` `SharedProperties`对象的属性（在要求集1.8 中引入）。 有关详细信息，请参阅[代理访问](https://docs.microsoft.com/office/dev/add-ins/outlook/delegate-access)文章。
 
       \[[API 集：邮箱 1.5](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
     remarks: |-
