--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartaxistitleloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartaxistitleloadoptions.yml
@@ -15,6 +15,7 @@ items:
       - 'excel!Excel.Interfaces.ChartAxisTitleLoadOptions#$all:member'
       - 'excel!Excel.Interfaces.ChartAxisTitleLoadOptions#format:member'
       - 'excel!Excel.Interfaces.ChartAxisTitleLoadOptions#text:member'
+      - 'excel!Excel.Interfaces.ChartAxisTitleLoadOptions#textOrientation:member'
       - 'excel!Excel.Interfaces.ChartAxisTitleLoadOptions#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleLoadOptions#$all:member'
     summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
@@ -55,6 +56,22 @@ items:
     type: property
     syntax:
       content: 'text?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: 'excel!Excel.Interfaces.ChartAxisTitleLoadOptions#textOrientation:member'
+    summary: |-
+      表示文本面向图表轴标题的角度。 该值应为-90 到90的整数或垂直方向的文本的整数180。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: textOrientation
+    fullName: textOrientation
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'textOrientation?: boolean;'
       return:
         type:
           - boolean
