--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartaxistitleupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.chartaxistitleupdatedata.yml
@@ -11,6 +11,7 @@ items:
     children:
       - 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#format:member'
       - 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#text:member'
+      - 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#textOrientation:member'
       - 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#format:member'
     summary: |-
@@ -42,6 +43,22 @@ items:
       return:
         type:
           - string
+  - uid: 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#textOrientation:member'
+    summary: |-
+      表示文本面向图表轴标题的角度。 该值应为-90 到90的整数或垂直方向的文本的整数180。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: textOrientation
+    fullName: textOrientation
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'textOrientation?: number;'
+      return:
+        type:
+          - number
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleUpdateData#visible:member'
     summary: |-
       指定坐标轴标题是否可见的布尔值。
