--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.commentcollectionloadoptions.yml
@@ -16,6 +16,7 @@ items:
       - 'excel!Excel.Interfaces.CommentCollectionLoadOptions#authorEmail:member'
       - 'excel!Excel.Interfaces.CommentCollectionLoadOptions#authorName:member'
       - 'excel!Excel.Interfaces.CommentCollectionLoadOptions#content:member'
+      - 'excel!Excel.Interfaces.CommentCollectionLoadOptions#contentType:member'
       - 'excel!Excel.Interfaces.CommentCollectionLoadOptions#creationDate:member'
       - 'excel!Excel.Interfaces.CommentCollectionLoadOptions#id:member'
       - 'excel!Excel.Interfaces.CommentCollectionLoadOptions#mentions:member'
@@ -75,6 +76,22 @@ items:
     type: property
     syntax:
       content: 'content?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: 'excel!Excel.Interfaces.CommentCollectionLoadOptions#contentType:member'
+    summary: |-
+      对于集合中的每一项：获取批注的内容类型。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: contentType
+    fullName: contentType
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'contentType?: boolean;'
       return:
         type:
           - boolean
