--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.cultureinfoloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.cultureinfoloadoptions.yml
@@ -15,7 +15,7 @@ items:
     children:
       - 'excel!Excel.Interfaces.CultureInfoLoadOptions#$all:member'
       - 'excel!Excel.Interfaces.CultureInfoLoadOptions#name:member'
-      - 'excel!Excel.Interfaces.CultureInfoLoadOptions#numberFormatInfo:member'
+      - 'excel!Excel.Interfaces.CultureInfoLoadOptions#numberFormat:member'
   - uid: 'excel!Excel.Interfaces.CultureInfoLoadOptions#$all:member'
     summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     isPreview: true
@@ -45,19 +45,19 @@ items:
       return:
         type:
           - boolean
-  - uid: 'excel!Excel.Interfaces.CultureInfoLoadOptions#numberFormatInfo:member'
+  - uid: 'excel!Excel.Interfaces.CultureInfoLoadOptions#numberFormat:member'
     summary: |-
       定义适当的区域性格式，以显示数字。 这取决于当前的系统区域性设置。
 
       \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     isPreview: true
-    name: numberFormatInfo
-    fullName: numberFormatInfo
+    name: numberFormat
+    fullName: numberFormat
     langs:
       - typeScript
     type: property
     syntax:
-      content: 'numberFormatInfo?: Excel.Interfaces.NumberFormatInfoLoadOptions;'
+      content: 'numberFormat?: Excel.Interfaces.NumberFormatInfoLoadOptions;'
       return:
         type:
           - 'excel!Excel.Interfaces.NumberFormatInfoLoadOptions:interface'
