--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivotlayoutupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.pivotlayoutupdatedata.yml
@@ -12,6 +12,7 @@ items:
       - 'excel!Excel.Interfaces.PivotLayoutUpdateData#autoFormat:member'
       - 'excel!Excel.Interfaces.PivotLayoutUpdateData#enableFieldList:member'
       - 'excel!Excel.Interfaces.PivotLayoutUpdateData#layoutType:member'
+      - 'excel!Excel.Interfaces.PivotLayoutUpdateData#pivotStyle:member'
       - 'excel!Excel.Interfaces.PivotLayoutUpdateData#preserveFormatting:member'
       - 'excel!Excel.Interfaces.PivotLayoutUpdateData#showColumnGrandTotals:member'
       - 'excel!Excel.Interfaces.PivotLayoutUpdateData#showRowGrandTotals:member'
@@ -61,6 +62,22 @@ items:
       return:
         type:
           - 'excel!Excel.Interfaces.PivotLayoutUpdateData#layoutType~0:complex'
+  - uid: 'excel!Excel.Interfaces.PivotLayoutUpdateData#pivotStyle:member'
+    summary: |-
+      应用于数据透视表的样式。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: pivotStyle
+    fullName: pivotStyle
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'pivotStyle?: Excel.Interfaces.PivotTableStyleUpdateData;'
+      return:
+        type:
+          - 'excel!Excel.Interfaces.PivotTableStyleUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.PivotLayoutUpdateData#preserveFormatting:member'
     summary: |-
       指定是否在通过透视、排序或更改页面字段项等操作来刷新或重新计算报表时保留格式。
@@ -131,6 +148,8 @@ references:
         fullName: Excel.PivotLayoutType
       - name: ' | "Compact" | "Tabular" | "Outline"'
         fullName: ' | "Compact" | "Tabular" | "Outline"'
+  - uid: 'excel!Excel.Interfaces.PivotTableStyleUpdateData:interface'
+    name: Excel.Interfaces.PivotTableStyleUpdateData
   - uid: 'excel!Excel.Interfaces.PivotLayoutUpdateData#subtotalLocation~0:complex'
     name: Excel.SubtotalLocationType | "AtTop" | "AtBottom" | "Off"
     fullName: Excel.SubtotalLocationType | "AtTop" | "AtBottom" | "Off"
