--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangecollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangecollectionloadoptions.yml
@@ -30,6 +30,7 @@ items:
       - 'excel!Excel.Interfaces.RangeCollectionLoadOptions#left:member'
       - 'excel!Excel.Interfaces.RangeCollectionLoadOptions#linkedDataTypeState:member'
       - 'excel!Excel.Interfaces.RangeCollectionLoadOptions#numberFormat:member'
+      - 'excel!Excel.Interfaces.RangeCollectionLoadOptions#numberFormatCategories:member'
       - 'excel!Excel.Interfaces.RangeCollectionLoadOptions#numberFormatLocal:member'
       - 'excel!Excel.Interfaces.RangeCollectionLoadOptions#rowCount:member'
       - 'excel!Excel.Interfaces.RangeCollectionLoadOptions#rowHidden:member'
@@ -352,6 +353,22 @@ items:
     type: property
     syntax:
       content: 'numberFormat?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: 'excel!Excel.Interfaces.RangeCollectionLoadOptions#numberFormatCategories:member'
+    summary: |-
+      对于集合中的每一项：表示每个单元格的编号格式的类别。 只读。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: numberFormatCategories
+    fullName: numberFormatCategories
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'numberFormatCategories?: boolean;'
       return:
         type:
           - boolean
