--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangeloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.rangeloadoptions.yml
@@ -33,6 +33,7 @@ items:
       - 'excel!Excel.Interfaces.RangeLoadOptions#left:member'
       - 'excel!Excel.Interfaces.RangeLoadOptions#linkedDataTypeState:member'
       - 'excel!Excel.Interfaces.RangeLoadOptions#numberFormat:member'
+      - 'excel!Excel.Interfaces.RangeLoadOptions#numberFormatCategories:member'
       - 'excel!Excel.Interfaces.RangeLoadOptions#numberFormatLocal:member'
       - 'excel!Excel.Interfaces.RangeLoadOptions#rowCount:member'
       - 'excel!Excel.Interfaces.RangeLoadOptions#rowHidden:member'
@@ -355,6 +356,22 @@ items:
     type: property
     syntax:
       content: 'numberFormat?: boolean;'
+      return:
+        type:
+          - boolean
+  - uid: 'excel!Excel.Interfaces.RangeLoadOptions#numberFormatCategories:member'
+    summary: |-
+      表示每个单元格的数字格式的类别。 只读。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: numberFormatCategories
+    fullName: numberFormatCategories
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'numberFormatCategories?: boolean;'
       return:
         type:
           - boolean
