--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.slicerloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.slicerloadoptions.yml
@@ -20,6 +20,7 @@ items:
       - 'excel!Excel.Interfaces.SlicerLoadOptions#left:member'
       - 'excel!Excel.Interfaces.SlicerLoadOptions#name:member'
       - 'excel!Excel.Interfaces.SlicerLoadOptions#nameInFormula:member'
+      - 'excel!Excel.Interfaces.SlicerLoadOptions#slicerStyle:member'
       - 'excel!Excel.Interfaces.SlicerLoadOptions#sortBy:member'
       - 'excel!Excel.Interfaces.SlicerLoadOptions#style:member'
       - 'excel!Excel.Interfaces.SlicerLoadOptions#top:member'
@@ -143,6 +144,22 @@ items:
       return:
         type:
           - boolean
+  - uid: 'excel!Excel.Interfaces.SlicerLoadOptions#slicerStyle:member'
+    summary: |-
+      应用于切片器的样式。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: slicerStyle
+    fullName: slicerStyle
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'slicerStyle?: Excel.Interfaces.SlicerStyleLoadOptions;'
+      return:
+        type:
+          - 'excel!Excel.Interfaces.SlicerStyleLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.SlicerLoadOptions#sortBy:member'
     summary: |-
       表示切片器中的项目的排序顺序。 可能的值为： "DataSourceOrder"、"升序"、"降序"。
@@ -219,5 +236,7 @@ items:
         type:
           - 'excel!Excel.Interfaces.WorksheetLoadOptions:interface'
 references:
+  - uid: 'excel!Excel.Interfaces.SlicerStyleLoadOptions:interface'
+    name: Excel.Interfaces.SlicerStyleLoadOptions
   - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions:interface'
     name: Excel.Interfaces.WorksheetLoadOptions
