--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.tableloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.tableloadoptions.yml
@@ -2,7 +2,7 @@
 items:
   - uid: 'excel!Excel.Interfaces.TableLoadOptions:interface'
     summary: |-
-      表示一个 Excel 表。 若要了解有关表对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-tables)<!-- -->.
+      表示 Excel 表格。 若要了解有关表对象模型的详细信息，请参阅[使用 Excel JAVASCRIPT API 处理表](https://docs.microsoft.com/office/dev/add-ins/excel/excel-add-ins-tables)<!-- -->.
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.TableLoadOptions
@@ -28,6 +28,7 @@ items:
       - 'excel!Excel.Interfaces.TableLoadOptions#showTotals:member'
       - 'excel!Excel.Interfaces.TableLoadOptions#sort:member'
       - 'excel!Excel.Interfaces.TableLoadOptions#style:member'
+      - 'excel!Excel.Interfaces.TableLoadOptions#tableStyle:member'
       - 'excel!Excel.Interfaces.TableLoadOptions#worksheet:member'
   - uid: 'excel!Excel.Interfaces.TableLoadOptions#$all:member'
     summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
@@ -134,6 +135,8 @@ items:
   - uid: 'excel!Excel.Interfaces.TableLoadOptions#name:member'
     summary: |-
       表的名称。
+
+      表的集名称必须遵循 "[重命名 Excel 表" 一](https://support.office.com/article/Rename-an-Excel-table-FBF49A4F-82A3-43EB-8BA2-44D21233B114)文中指定的准则。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -266,6 +269,22 @@ items:
       return:
         type:
           - boolean
+  - uid: 'excel!Excel.Interfaces.TableLoadOptions#tableStyle:member'
+    summary: |-
+      应用于表的样式。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: tableStyle
+    fullName: tableStyle
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'tableStyle?: Excel.Interfaces.TableStyleLoadOptions;'
+      return:
+        type:
+          - 'excel!Excel.Interfaces.TableStyleLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.TableLoadOptions#worksheet:member'
     summary: |-
       包含当前表格的工作表。
@@ -290,5 +309,7 @@ references:
     name: Excel.Interfaces.TableRowCollectionLoadOptions
   - uid: 'excel!Excel.Interfaces.TableSortLoadOptions:interface'
     name: Excel.Interfaces.TableSortLoadOptions
+  - uid: 'excel!Excel.Interfaces.TableStyleLoadOptions:interface'
+    name: Excel.Interfaces.TableStyleLoadOptions
   - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions:interface'
     name: Excel.Interfaces.WorksheetLoadOptions
