--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.tablescopedcollectionloadoptions.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.tablescopedcollectionloadoptions.yml
@@ -28,6 +28,7 @@ items:
       - 'excel!Excel.Interfaces.TableScopedCollectionLoadOptions#showTotals:member'
       - 'excel!Excel.Interfaces.TableScopedCollectionLoadOptions#sort:member'
       - 'excel!Excel.Interfaces.TableScopedCollectionLoadOptions#style:member'
+      - 'excel!Excel.Interfaces.TableScopedCollectionLoadOptions#tableStyle:member'
       - 'excel!Excel.Interfaces.TableScopedCollectionLoadOptions#worksheet:member'
   - uid: 'excel!Excel.Interfaces.TableScopedCollectionLoadOptions#$all:member'
     summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
@@ -134,6 +135,8 @@ items:
   - uid: 'excel!Excel.Interfaces.TableScopedCollectionLoadOptions#name:member'
     summary: |-
       对于集合中的每一项：表的名称。
+
+      表的集名称必须遵循 "[重命名 Excel 表" 一](https://support.office.com/article/Rename-an-Excel-table-FBF49A4F-82A3-43EB-8BA2-44D21233B114)文中指定的准则。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -266,6 +269,22 @@ items:
       return:
         type:
           - boolean
+  - uid: 'excel!Excel.Interfaces.TableScopedCollectionLoadOptions#tableStyle:member'
+    summary: |-
+      对于集合中的每一项：应用于表的样式。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: tableStyle
+    fullName: tableStyle
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'tableStyle?: Excel.Interfaces.TableStyleLoadOptions;'
+      return:
+        type:
+          - 'excel!Excel.Interfaces.TableStyleLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.TableScopedCollectionLoadOptions#worksheet:member'
     summary: |-
       对于集合中的每一项：包含当前表的工作表。
@@ -290,5 +309,7 @@ references:
     name: Excel.Interfaces.TableRowCollectionLoadOptions
   - uid: 'excel!Excel.Interfaces.TableSortLoadOptions:interface'
     name: Excel.Interfaces.TableSortLoadOptions
+  - uid: 'excel!Excel.Interfaces.TableStyleLoadOptions:interface'
+    name: Excel.Interfaces.TableStyleLoadOptions
   - uid: 'excel!Excel.Interfaces.WorksheetLoadOptions:interface'
     name: Excel.Interfaces.WorksheetLoadOptions
