--- a/docs/docs-ref-autogen/excel/excel/excel.interfaces.tableupdatedata.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.interfaces.tableupdatedata.yml
@@ -18,6 +18,7 @@ items:
       - 'excel!Excel.Interfaces.TableUpdateData#showHeaders:member'
       - 'excel!Excel.Interfaces.TableUpdateData#showTotals:member'
       - 'excel!Excel.Interfaces.TableUpdateData#style:member'
+      - 'excel!Excel.Interfaces.TableUpdateData#tableStyle:member'
   - uid: 'excel!Excel.Interfaces.TableUpdateData#highlightFirstColumn:member'
     summary: |-
       指明第一列是否包含特殊格式。
@@ -51,6 +52,8 @@ items:
   - uid: 'excel!Excel.Interfaces.TableUpdateData#name:member'
     summary: |-
       表的名称。
+
+      表的集名称必须遵循 "[重命名 Excel 表" 一](https://support.office.com/article/Rename-an-Excel-table-FBF49A4F-82A3-43EB-8BA2-44D21233B114)文中指定的准则。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -153,3 +156,22 @@ items:
       return:
         type:
           - string
+  - uid: 'excel!Excel.Interfaces.TableUpdateData#tableStyle:member'
+    summary: |-
+      应用于表的样式。
+
+      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    isPreview: true
+    name: tableStyle
+    fullName: tableStyle
+    langs:
+      - typeScript
+    type: property
+    syntax:
+      content: 'tableStyle?: Excel.Interfaces.TableStyleUpdateData;'
+      return:
+        type:
+          - 'excel!Excel.Interfaces.TableStyleUpdateData:interface'
+references:
+  - uid: 'excel!Excel.Interfaces.TableStyleUpdateData:interface'
+    name: Excel.Interfaces.TableStyleUpdateData
