--- a/docs/docs-ref-autogen/office/office/office.ui.yml
+++ b/docs/docs-ref-autogen/office/office/office.ui.yml
@@ -12,10 +12,46 @@ items:
     type: interface
     package: office!
     children:
+      - 'office!Office.UI#addHandlerAsync:member(1)'
       - 'office!Office.UI#closeContainer:member(1)'
       - 'office!Office.UI#displayDialogAsync:member(1)'
       - 'office!Office.UI#displayDialogAsync:member(2)'
       - 'office!Office.UI#messageParent:member(1)'
+  - uid: 'office!Office.UI#addHandlerAsync:member(1)'
+    summary: 使用指定的事件类型将事件处理程序添加到对象。
+    remarks: |-
+      **要求集**： TBD
+
+      只要每个事件处理程序函数的名称是唯一的，您就可以为指定的事件类型添加多个事件处理程序。
+    isPreview: true
+    name: 'addHandlerAsync(eventType, handler, options, callback)'
+    fullName: 'addHandlerAsync(eventType, handler, options, callback)'
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'addHandlerAsync(eventType: Office.EventType, handler: (result: any) => void, options?: Office.AsyncContextOptions, callback?: (result: AsyncResult<void>) => void): void;'
+      return:
+        type:
+          - void
+        description: ''
+      parameters:
+        - id: eventType
+          description: 指定要添加事件的类型。 这必须`Office.EventType.DialogParentMessageReceived`<!-- -->.
+          type:
+            - 'office!Office.EventType:enum'
+        - id: handler
+          description: 要添加的事件处理程序函数，其唯一的参数的类型为。
+          type:
+            - '(result: any) => void'
+        - id: options
+          description: 可选。 提供一个选项，用于保留任何类型的未更改的上下文数据，以供在回调中使用。
+          type:
+            - 'office!Office.AsyncContextOptions:interface'
+        - id: callback
+          description: '可选。 在处理程序注册返回时调用的函数，其唯一的参数的类型为 " [Office. AsyncResult](xref:office!Office.AsyncResult:interface) "<!-- -->.'
+          type:
+            - 'office!Office.UI#addHandlerAsync~0:complex'
   - uid: 'office!Office.UI#closeContainer:member(1)'
     summary: 关闭正在执行 JavaScript 的 UI 容器。
     remarks: |-
@@ -201,6 +237,21 @@ items:
           type:
             - boolean | string
 references:
+  - uid: 'office!Office.EventType:enum'
+    name: Office.EventType
+  - uid: 'office!Office.AsyncContextOptions:interface'
+    name: Office.AsyncContextOptions
+  - uid: 'office!Office.UI#addHandlerAsync~0:complex'
+    name: '(result: AsyncResult<void>) => void'
+    fullName: '(result: Office.AsyncResult<void>) => void'
+    spec.typeScript:
+      - name: '(result: '
+        fullName: '(result: '
+      - uid: 'office!Office.AsyncResult:interface'
+        name: AsyncResult
+        fullName: Office.AsyncResult
+      - name: <void>) => void
+        fullName: <void>) => void
   - uid: 'office!Office.DialogOptions:interface'
     name: DialogOptions
   - uid: 'office!Office.UI#displayDialogAsync~0:complex'
