--- a/docs/docs-ref-autogen/outlook_1_7/outlook/office.body.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/outlook/office.body.yml
@@ -288,7 +288,7 @@ items:
 
       - `DataExceedsMaximumSize`<!-- -->： Data 参数的长度超过1000000个字符。
 
-      - `InvalidFormatError`<!-- -->： CoercionType 参数设置为`Office.CoercionType.Html` ，邮件正文为纯文本格式。
+      - `InvalidFormatError`<!-- -->：此`options.coercionType`参数设置为`Office.CoercionType.Html` ，邮件正文为纯文本格式。
 
       #### <a name="examples"></a>示例
 
